@@ -1,3 +1,8 @@
+2016-12-01  Torbjörn Granlund  <tg@gmplib.org>
+
+	* Makefile.am (LIBGMP_LT_*, LIBGMPXX_LT_*): Bump version info.
+	* gmp-h.in: Bump version.
+
 2016-11-29  Torbjörn Granlund  <tg@gmplib.org>
 
 	* gmp-h.in (__GNU_MP__): Bump.
